tests/sawn/fixtures/invalid/10_spaces_around_equals.sawn
// INVALID: Spaces around =
name = "Luke"
